updated at: 2020-03-04 00:20, VRChat用アバター　月光丸Ver2.2 - アノマロ工房 - BOOTH

--- a/VRChat/72/1194672.html
+++ b/VRChat/72/1194672.html
@@ -17,14 +17,14 @@
     <meta name="twitter:description" content=
     "◆月光丸（げっこうまる） 悪魔の姿をした忍者というコンセプトでデザインした バイクに変形するロボット。 ■2019年6月21日追記 VRChatのポリゴン数制限が無くなったので これまで通り変形アバターとしてアップロードできます。 ただし7万ポリゴンを超えるのでべリープア判定になります。 購入して使用してくれた方がいましたら ハッシュタグ#アノマロ工房　付きでツイートしてくれるとエゴサが捗ります。">
     <meta name="twitter:image" content=
-    "https://booth.pximg.net/c/620x620/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1194672/a6cd908f-a366-4a5a-85b4-6e73d8f9b33b_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1194672/111db8f4-bebd-43b8-91e1-2cb5ba2f220b_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "VRChat用アバター　月光丸Ver2.2 - アノマロ工房 - BOOTH">
     <meta property="og:description" content=
     "◆月光丸（げっこうまる） 悪魔の姿をした忍者というコンセプトでデザインした バイクに変形するロボット。 ■2019年6月21日追記 VRChatのポリゴン数制限が無くなったので これまで通り変形アバターとしてアップロードできます。 ただし7万ポリゴンを超えるのでべリープア判定になります。 購入して使用してくれた方がいましたら ハッシュタグ#アノマロ工房　付きでツイートしてくれるとエゴサが捗ります。">
     <meta property="og:image" content=
-    "https://booth.pximg.net/c/620x620/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1194672/a6cd908f-a366-4a5a-85b4-6e73d8f9b33b_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1194672/111db8f4-bebd-43b8-91e1-2cb5ba2f220b_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1194672">
     <meta name="ga_dimension1" content="customer">
@@ -253,18 +253,9 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <iframe width="560" height="315" src=
-                            "https://www.youtube.com/embed/zQquJlXxMmU"
-                            frameborder="0" allowfullscreen
-                            ></iframe>
-                          </div>
-                        </div>
-                        <div>
-                          <div class=
-                          "market-item-detail-item-image-wrapper">
                             <img alt="VRChat用アバター　月光丸Ver2.2" class=
                             "market-item-detail-item-image" src=
-                            "https://booth.pximg.net/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1194672/a6cd908f-a366-4a5a-85b4-6e73d8f9b33b_base_resized.jpg">
+                            "https://booth.pximg.net/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1194672/111db8f4-bebd-43b8-91e1-2cb5ba2f220b_base_resized.jpg">
                           </div>
                         </div>
                         <div>
@@ -273,7 +264,7 @@
                             <img alt="VRChat用アバター　月光丸Ver2.2" class=
                             "market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1194672/cb08dae4-0bf4-4670-aa61-255a717d17ea_base_resized.jpg">
+                            "https://booth.pximg.net/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1194672/df1611af-a912-43bd-a7aa-0854753c3a75_base_resized.jpg">
                           </div>
                         </div>
                         <div>
@@ -282,7 +273,7 @@
                             <img alt="VRChat用アバター　月光丸Ver2.2" class=
                             "market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1194672/d663c014-b5d3-47c2-9c0f-e641db7b5953_base_resized.jpg">
+                            "https://booth.pximg.net/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1194672/b5dbda91-29eb-4131-a90e-cdf9697b82ac_base_resized.jpg">
                           </div>
                         </div>
                         <div>
@@ -291,7 +282,7 @@
                             <img alt="VRChat用アバター　月光丸Ver2.2" class=
                             "market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1194672/345fc1bf-7342-41c0-a84f-d814f6be01ed_base_resized.jpg">
+                            "https://booth.pximg.net/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1194672/60bb2ff3-de83-410a-9fd5-c4620a19a3ea_base_resized.jpg">
                           </div>
                         </div>
                         <div>
@@ -300,7 +291,7 @@
                             <img alt="VRChat用アバター　月光丸Ver2.2" class=
                             "market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1194672/57737e90-aa4f-4e7d-991d-da32ac61a62e_base_resized.jpg">
+                            "https://booth.pximg.net/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1194672/c4f424e0-7357-4ae5-97aa-d680d00fd732_base_resized.jpg">
                           </div>
                         </div>
                         <div>
@@ -309,7 +300,7 @@
                             <img alt="VRChat用アバター　月光丸Ver2.2" class=
                             "market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1194672/1954ec28-947a-4d8d-9908-69470936ec69_base_resized.jpg">
+                            "https://booth.pximg.net/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1194672/a27ca27a-9ad5-42cc-9453-61e91e4adbc7_base_resized.jpg">
                           </div>
                         </div>
                         <div>
@@ -318,7 +309,16 @@
                             <img alt="VRChat用アバター　月光丸Ver2.2" class=
                             "market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1194672/8e86c6ce-298f-4e87-8599-3d75daed420b_base_resized.jpg">
+                            "https://booth.pximg.net/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1194672/0763ca00-88d5-4525-b9e2-12a65fe6f041_base_resized.jpg">
+                          </div>
+                        </div>
+                        <div>
+                          <div class=
+                          "market-item-detail-item-image-wrapper">
+                            <img alt="VRChat用アバター　月光丸Ver2.2" class=
+                            "market-item-detail-item-image"
+                            data-lazy=
+                            "https://booth.pximg.net/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1194672/9a9c1374-7127-4c4d-b14f-dde76bae7145_base_resized.jpg">
                           </div>
                         </div>
                         <div>
@@ -337,36 +337,37 @@
                         <div class=
                         "youtube-thumbnail slick-thumbnail-border">
                         </div></a><a class="pointer">
-                        <div class=
-                        "youtube-thumbnail slick-thumbnail-border">
+                        <div class="slick-thumbnail-border">
+                          <img src=
+                          "https://booth.pximg.net/c/72x72_a2_g5/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1194672/111db8f4-bebd-43b8-91e1-2cb5ba2f220b_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1194672/a6cd908f-a366-4a5a-85b4-6e73d8f9b33b_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1194672/df1611af-a912-43bd-a7aa-0854753c3a75_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1194672/cb08dae4-0bf4-4670-aa61-255a717d17ea_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1194672/b5dbda91-29eb-4131-a90e-cdf9697b82ac_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1194672/d663c014-b5d3-47c2-9c0f-e641db7b5953_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1194672/60bb2ff3-de83-410a-9fd5-c4620a19a3ea_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1194672/345fc1bf-7342-41c0-a84f-d814f6be01ed_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1194672/c4f424e0-7357-4ae5-97aa-d680d00fd732_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1194672/57737e90-aa4f-4e7d-991d-da32ac61a62e_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1194672/a27ca27a-9ad5-42cc-9453-61e91e4adbc7_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1194672/1954ec28-947a-4d8d-9908-69470936ec69_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1194672/0763ca00-88d5-4525-b9e2-12a65fe6f041_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1194672/8e86c6ce-298f-4e87-8599-3d75daed420b_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1194672/9a9c1374-7127-4c4d-b14f-dde76bae7145_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
