--- a/VRChat/39/1140439.html
+++ b/VRChat/39/1140439.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      VillainVisor - ConsoleSoup - BOOTH
+      VillainVisor - Takuya Tazoe - BOOTH
     </title>
     <meta name="description" content=
     "■アップデート履歴 2018.12.17 - 初版リリース ■サンプルモデル ・UnityChan &amp; HighWay ©Unity Technologies Japan/UCL 【改変可】【商用可】【アバターサービス利用可】">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "VillainVisor - ConsoleSoup - BOOTH">
+    "VillainVisor - Takuya Tazoe - BOOTH">
     <meta name="twitter:description" content=
     "■アップデート履歴 2018.12.17 - 初版リリース ■サンプルモデル ・UnityChan &amp; HighWay ©Unity Technologies Japan/UCL 【改変可】【商用可】【アバターサービス利用可】">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/e7b87c36-9f3a-4f4c-90ee-32cdd490dac6/i/1140439/d5fb3cb2-7483-4031-b966-04a23a903a30_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "VillainVisor - ConsoleSoup - BOOTH">
+    "VillainVisor - Takuya Tazoe - BOOTH">
     <meta property="og:description" content=
     "■アップデート履歴 2018.12.17 - 初版リリース ■サンプルモデル ・UnityChan &amp; HighWay ©Unity Technologies Japan/UCL 【改変可】【商用可】【アバターサービス利用可】">
     <meta property="og:image" content=
@@ -120,11 +120,11 @@
                           href="https://consolesoup.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="ConsoleSoup" class=
+                            <img alt="Takuya Tazoe" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/5448764/icon_image/45095018-eb6f-4880-9615-dd52d952171d_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              ConsoleSoup
+                              Takuya Tazoe
                             </div>
                           </div></a>
                         </div>
@@ -224,7 +224,7 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1140439"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text="VillainVisor | ConsoleSoup"
+                          data-text="VillainVisor | Takuya Tazoe"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
