updated at: 2020-03-04 02:12, CSToon Shader〔v1.0.4〕 - Takuya Tazoe - BOOTH

--- a/VRChat/65/1089165.html
+++ b/VRChat/65/1089165.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      CSToon Shader〔v1.0.4〕 - ConsoleSoup - BOOTH
+      CSToon Shader〔v1.0.4〕 - Takuya Tazoe - BOOTH
     </title>
     <meta name="description" content=
     "アップデート履歴、利用方法など説明はREADMEをご覧ください。 または質問いただければ答えますので気軽にどうぞ。 【改変可】【商用可】【アバターサービス利用可】">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "CSToon Shader〔v1.0.4〕 - ConsoleSoup - BOOTH">
+    "CSToon Shader〔v1.0.4〕 - Takuya Tazoe - BOOTH">
     <meta name="twitter:description" content=
     "アップデート履歴、利用方法など説明はREADMEをご覧ください。 または質問いただければ答えますので気軽にどうぞ。 【改変可】【商用可】【アバターサービス利用可】">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/e7b87c36-9f3a-4f4c-90ee-32cdd490dac6/i/1089165/9160eac3-a02f-43a2-a187-181385febd78_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "CSToon Shader〔v1.0.4〕 - ConsoleSoup - BOOTH">
+    "CSToon Shader〔v1.0.4〕 - Takuya Tazoe - BOOTH">
     <meta property="og:description" content=
     "アップデート履歴、利用方法など説明はREADMEをご覧ください。 または質問いただければ答えますので気軽にどうぞ。 【改変可】【商用可】【アバターサービス利用可】">
     <meta property="og:image" content=
@@ -121,11 +121,11 @@
                           href="https://consolesoup.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="ConsoleSoup" class=
+                            <img alt="Takuya Tazoe" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/5448764/icon_image/45095018-eb6f-4880-9615-dd52d952171d_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              ConsoleSoup
+                              Takuya Tazoe
                             </div>
                           </div></a>
                         </div>
@@ -278,7 +278,7 @@
                           "https://booth.pm/ja/items/1089165"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "CSToon Shader〔v1.0.4〕 | ConsoleSoup"
+                          "CSToon Shader〔v1.0.4〕 | Takuya Tazoe"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
