--- a/VRChat/20/1124220.html
+++ b/VRChat/20/1124220.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      CSMetal - ConsoleSoup - BOOTH
+      CSMetal - Takuya Tazoe - BOOTH
     </title>
     <meta name="description" content=
     "【概要】 ご自由にお使いください。 Shaderの『改変後の再配布』を許可します。 ※改変した際はご連絡いただけると見にいきます！ ReflectionProbeの設定をしている場所で綺麗に反射します。 「Fantasy Syukaijo」とかだと茶色の壁なので反射で茶色になります。 「坪倉家 | Tsubokura's Home」だとカメラの設定もあり、綺麗に反射されています。 何も設定がなく、反射しないときはただのTextureの色になります。 【更新履歴】 〇2018/12/03 - ver1.0.0 ・公開開始 【改変可】【商用可】【アバターサービス利用可】">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "CSMetal - ConsoleSoup - BOOTH">
+    "CSMetal - Takuya Tazoe - BOOTH">
     <meta name="twitter:description" content=
     "【概要】 ご自由にお使いください。 Shaderの『改変後の再配布』を許可します。 ※改変した際はご連絡いただけると見にいきます！ ReflectionProbeの設定をしている場所で綺麗に反射します。 「Fantasy Syukaijo」とかだと茶色の壁なので反射で茶色になります。 「坪倉家 | Tsubokura's Home」だとカメラの設定もあり、綺麗に反射されています。 何も設定がなく、反射しないときはただのTextureの色になります。 【更新履歴】 〇2018/12/03 - ver1.0.0 ・公開開始 【改変可】【商用可】【アバターサービス利用可】">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/e7b87c36-9f3a-4f4c-90ee-32cdd490dac6/i/1124220/0c112bed-503a-41a3-856d-87932a3b2b57_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "CSMetal - ConsoleSoup - BOOTH">
+    "CSMetal - Takuya Tazoe - BOOTH">
     <meta property="og:description" content=
     "【概要】 ご自由にお使いください。 Shaderの『改変後の再配布』を許可します。 ※改変した際はご連絡いただけると見にいきます！ ReflectionProbeの設定をしている場所で綺麗に反射します。 「Fantasy Syukaijo」とかだと茶色の壁なので反射で茶色になります。 「坪倉家 | Tsubokura's Home」だとカメラの設定もあり、綺麗に反射されています。 何も設定がなく、反射しないときはただのTextureの色になります。 【更新履歴】 〇2018/12/03 - ver1.0.0 ・公開開始 【改変可】【商用可】【アバターサービス利用可】">
     <meta property="og:image" content=
@@ -121,11 +121,11 @@
                           href="https://consolesoup.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="ConsoleSoup" class=
+                            <img alt="Takuya Tazoe" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/5448764/icon_image/45095018-eb6f-4880-9615-dd52d952171d_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              ConsoleSoup
+                              Takuya Tazoe
                             </div>
                           </div></a>
                         </div>
@@ -208,7 +208,7 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1124220"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text="CSMetal | ConsoleSoup"
+                          data-text="CSMetal | Takuya Tazoe"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
