--- a/VRChat/65/1100165.html
+++ b/VRChat/65/1100165.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      [Cubeds-Unity-Shaders] FlatLitToonReversible - ConsoleSoup -
+      [Cubeds-Unity-Shaders] FlatLitToonReversible - Takuya Tazoe -
       BOOTH
     </title>
     <meta name="description" content=
@@ -14,14 +14,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "[Cubeds-Unity-Shaders] FlatLitToonReversible - ConsoleSoup - BOOTH">
+    "[Cubeds-Unity-Shaders] FlatLitToonReversible - Takuya Tazoe - BOOTH">
     <meta name="twitter:description" content=
     "①「Cubeds-Unity-Shaders」をImport ②「FlatLitToonReversible」をImport ③「FlatLitToonReversible」の中のファイルを「Cubeds-Unity-Shaders」に入れる。 　※フォルダ名と階層が同じなので同じ場所に入れてください。 ④移動したファイルを選択し、Inspectorで見てエラーが出ていたら、右クリックでreimportを選択。 あとは他のShaderと同じように利用できます。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/e7b87c36-9f3a-4f4c-90ee-32cdd490dac6/i/1100165/22f7e097-3388-4101-a698-a5c965663223_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "[Cubeds-Unity-Shaders] FlatLitToonReversible - ConsoleSoup - BOOTH">
+    "[Cubeds-Unity-Shaders] FlatLitToonReversible - Takuya Tazoe - BOOTH">
     <meta property="og:description" content=
     "①「Cubeds-Unity-Shaders」をImport ②「FlatLitToonReversible」をImport ③「FlatLitToonReversible」の中のファイルを「Cubeds-Unity-Shaders」に入れる。 　※フォルダ名と階層が同じなので同じ場所に入れてください。 ④移動したファイルを選択し、Inspectorで見てエラーが出ていたら、右クリックでreimportを選択。 あとは他のShaderと同じように利用できます。">
     <meta property="og:image" content=
@@ -122,11 +122,11 @@
                           href="https://consolesoup.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="ConsoleSoup" class=
+                            <img alt="Takuya Tazoe" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/5448764/icon_image/45095018-eb6f-4880-9615-dd52d952171d_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              ConsoleSoup
+                              Takuya Tazoe
                             </div>
                           </div></a>
                         </div>
@@ -213,7 +213,7 @@
                           "https://booth.pm/ja/items/1100165"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "[Cubeds-Unity-Shaders] FlatLitToonReversible | ConsoleSoup"
+                          "[Cubeds-Unity-Shaders] FlatLitToonReversible | Takuya Tazoe"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
