updated at: 2020-03-04 22:02, オリジナル３Dモデル　「ラナ - Suit -」 - SoftKaran - BOOTH

--- a/VRChat/47/1263747.html
+++ b/VRChat/47/1263747.html
@@ -483,6 +483,16 @@
                             "search-guide-tablet" data-tracking=
                             "click" data-product-list=
                             "from market_show via tag_list to search_index"
+                            href="https://booth.pm/ja/search/VRC">
+                            <div class="search-guide-tablet-label">
+                              <div class=
+                              "search-guide-tablet-label-inner">
+                                VRC
+                              </div>
+                            </div></a><a class=
+                            "search-guide-tablet" data-tracking=
+                            "click" data-product-list=
+                            "from market_show via tag_list to search_index"
                             href=
                             "https://booth.pm/ja/search/3D%20Character">
                             <div class="search-guide-tablet-label">
