--- a/VRChat/97/1084897.html
+++ b/VRChat/97/1084897.html
@@ -446,6 +446,16 @@
                               "search-guide-tablet-label-inner">
                                 VRアバター
                               </div>
+                            </div></a><a class=
+                            "search-guide-tablet" data-tracking=
+                            "click" data-product-list=
+                            "from market_show via tag_list to search_index"
+                            href="https://booth.pm/ja/search/VRC">
+                            <div class="search-guide-tablet-label">
+                              <div class=
+                              "search-guide-tablet-label-inner">
+                                VRC
+                              </div>
                             </div></a>
                           </div>
                         </div><a class=
