--- a/VRChat/58/1078158.html
+++ b/VRChat/58/1078158.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      スフレチーズケーキ【３Dモデル】 - てくのろじあ -teQnologia- - BOOTH
+      スフレチーズケーキ【３Dモデル】 - てくのろじあ - BOOTH
     </title>
     <meta name="description" content=
     "【説明】 スフレチーズケーキの3Dモデルです。 metalicテクスチャとnormalmapテクスチャでリアルな質感に仕上がっています。 マイワールドのテーブルの上にお一ついかがでしょうか？ △ポリゴン：1528 【ファイル内容】 チーズケーキ本体、皿、フォークのfbxファイルとテクスチャファイル、unitypackageファイルが同封してあります。 【利用について】 ・この商品を主体とする再配布を除き、商用・非商用問わずいかなる用途にもお使いいただけます。">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "スフレチーズケーキ【３Dモデル】 - てくのろじあ -teQnologia- - BOOTH">
+    "スフレチーズケーキ【３Dモデル】 - てくのろじあ - BOOTH">
     <meta name="twitter:description" content=
     "【説明】 スフレチーズケーキの3Dモデルです。 metalicテクスチャとnormalmapテクスチャでリアルな質感に仕上がっています。 マイワールドのテーブルの上にお一ついかがでしょうか？ △ポリゴン：1528 【ファイル内容】 チーズケーキ本体、皿、フォークのfbxファイルとテクスチャファイル、unitypackageファイルが同封してあります。 【利用について】 ・この商品を主体とする再配布を除き、商用・非商用問わずいかなる用途にもお使いいただけます。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/12d291ee-7368-4fb1-bc8b-4bf670ee558a/i/1078158/327276f6-bb1d-4838-bbac-39cf9da6aba8_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "スフレチーズケーキ【３Dモデル】 - てくのろじあ -teQnologia- - BOOTH">
+    "スフレチーズケーキ【３Dモデル】 - てくのろじあ - BOOTH">
     <meta property="og:description" content=
     "【説明】 スフレチーズケーキの3Dモデルです。 metalicテクスチャとnormalmapテクスチャでリアルな質感に仕上がっています。 マイワールドのテーブルの上にお一ついかがでしょうか？ △ポリゴン：1528 【ファイル内容】 チーズケーキ本体、皿、フォークのfbxファイルとテクスチャファイル、unitypackageファイルが同封してあります。 【利用について】 ・この商品を主体とする再配布を除き、商用・非商用問わずいかなる用途にもお使いいただけます。">
     <meta property="og:image" content=
@@ -120,11 +120,11 @@
                           href="https://lowteq.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="てくのろじあ -teQnologia-" class=
+                            <img alt="てくのろじあ" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/89867/icon_image/7076c0f8-ad1f-4e4f-8213-38ce9a1ad4e7_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              てくのろじあ -teQnologia-
+                              てくのろじあ
                             </div>
                           </div></a>
                         </div>
@@ -222,8 +222,7 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1078158"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text=
-                          "スフレチーズケーキ【３Dモデル】 | てくのろじあ -teQnologia-"
+                          data-text="スフレチーズケーキ【３Dモデル】 | てくのろじあ"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
