--- a/VRChat/76/1072676.html
+++ b/VRChat/76/1072676.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      【無料】ハロウィンアクセサリーセット【VRChat】 - てくのろじあ -teQnologia- - BOOTH
+      【無料】ハロウィンアクセサリーセット【VRChat】 - てくのろじあ - BOOTH
     </title>
     <meta name="description" content=
     "【商品説明】 VRChatで使うことを想定したローポリのハロウィンアクセサリー3Dモデルのセットです。 アバターにつけるだけでお手軽ハロウィン気分🎃 BOOST機能で支援してもらえたら嬉しいです！BOOST機能の詳細はこちら https://booth.pm/announcements/26 △ポリゴン かぼちゃ : 188 こうもり : 262 魔女帽子 : 206 星 : 44 【利用について】 ・この商品単体での再配布を除き、商用・非商用問わずいかなる用途にもお使いいただけます。">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "【無料】ハロウィンアクセサリーセット【VRChat】 - てくのろじあ -teQnologia- - BOOTH">
+    "【無料】ハロウィンアクセサリーセット【VRChat】 - てくのろじあ - BOOTH">
     <meta name="twitter:description" content=
     "【商品説明】 VRChatで使うことを想定したローポリのハロウィンアクセサリー3Dモデルのセットです。 アバターにつけるだけでお手軽ハロウィン気分🎃 BOOST機能で支援してもらえたら嬉しいです！BOOST機能の詳細はこちら https://booth.pm/announcements/26 △ポリゴン かぼちゃ : 188 こうもり : 262 魔女帽子 : 206 星 : 44 【利用について】 ・この商品単体での再配布を除き、商用・非商用問わずいかなる用途にもお使いいただけます。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/12d291ee-7368-4fb1-bc8b-4bf670ee558a/i/1072676/b9783686-32e7-4bac-9912-4bd22d194be8_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "【無料】ハロウィンアクセサリーセット【VRChat】 - てくのろじあ -teQnologia- - BOOTH">
+    "【無料】ハロウィンアクセサリーセット【VRChat】 - てくのろじあ - BOOTH">
     <meta property="og:description" content=
     "【商品説明】 VRChatで使うことを想定したローポリのハロウィンアクセサリー3Dモデルのセットです。 アバターにつけるだけでお手軽ハロウィン気分🎃 BOOST機能で支援してもらえたら嬉しいです！BOOST機能の詳細はこちら https://booth.pm/announcements/26 △ポリゴン かぼちゃ : 188 こうもり : 262 魔女帽子 : 206 星 : 44 【利用について】 ・この商品単体での再配布を除き、商用・非商用問わずいかなる用途にもお使いいただけます。">
     <meta property="og:image" content=
@@ -120,11 +120,11 @@
                           href="https://lowteq.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="てくのろじあ -teQnologia-" class=
+                            <img alt="てくのろじあ" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/89867/icon_image/7076c0f8-ad1f-4e4f-8213-38ce9a1ad4e7_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              てくのろじあ -teQnologia-
+                              てくのろじあ
                             </div>
                           </div></a>
                         </div>
@@ -276,7 +276,7 @@
                           "https://booth.pm/ja/items/1072676"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "【無料】ハロウィンアクセサリーセット【VRChat】 | てくのろじあ -teQnologia-"
+                          "【無料】ハロウィンアクセサリーセット【VRChat】 | てくのろじあ"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
