--- a/VRChat/52/1055252.html
+++ b/VRChat/52/1055252.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      【VRChat向け】リボンセット6+1種類 + 汎用テクスチャ3種 - てくのろじあ -teQnologia- -
-      BOOTH
+      【VRChat向け】リボンセット6+1種類 + 汎用テクスチャ3種 - てくのろじあ - BOOTH
     </title>
     <meta name="description" content=
     "【更新履歴】 2018/10/16　ver1.0 初版 2018/10/17　ver1.1 ribbon_fの左右反転したリボンを追加しました 2018/10/14　ver1.2 unitypackageとは別にfbxファイルを追加しました 【商品説明】 VRChatで使うことを想定したリボンのセットです。 リボンそれぞれのテクスチャの他に汎用テクスチャも３枚用意してあります。 組み合わせると２８種類のバリエーションが作れます。 またボーンが入っているのでDynamic boneなどを使うと揺らすことができます。 【ファイル内容】 ・ribbons.unitypackage">
@@ -14,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "【VRChat向け】リボンセット6+1種類 + 汎用テクスチャ3種 - てくのろじあ -teQnologia- - BOOTH">
+    "【VRChat向け】リボンセット6+1種類 + 汎用テクスチャ3種 - てくのろじあ - BOOTH">
     <meta name="twitter:description" content=
     "【更新履歴】 2018/10/16　ver1.0 初版 2018/10/17　ver1.1 ribbon_fの左右反転したリボンを追加しました 2018/10/14　ver1.2 unitypackageとは別にfbxファイルを追加しました 【商品説明】 VRChatで使うことを想定したリボンのセットです。 リボンそれぞれのテクスチャの他に汎用テクスチャも３枚用意してあります。 組み合わせると２８種類のバリエーションが作れます。 またボーンが入っているのでDynamic boneなどを使うと揺らすことができます。 【ファイル内容】 ・ribbons.unitypackage">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/12d291ee-7368-4fb1-bc8b-4bf670ee558a/i/1055252/a85ef6c3-fe99-4198-acf9-91079b7ed36c_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "【VRChat向け】リボンセット6+1種類 + 汎用テクスチャ3種 - てくのろじあ -teQnologia- - BOOTH">
+    "【VRChat向け】リボンセット6+1種類 + 汎用テクスチャ3種 - てくのろじあ - BOOTH">
     <meta property="og:description" content=
     "【更新履歴】 2018/10/16　ver1.0 初版 2018/10/17　ver1.1 ribbon_fの左右反転したリボンを追加しました 2018/10/14　ver1.2 unitypackageとは別にfbxファイルを追加しました 【商品説明】 VRChatで使うことを想定したリボンのセットです。 リボンそれぞれのテクスチャの他に汎用テクスチャも３枚用意してあります。 組み合わせると２８種類のバリエーションが作れます。 またボーンが入っているのでDynamic boneなどを使うと揺らすことができます。 【ファイル内容】 ・ribbons.unitypackage">
     <meta property="og:image" content=
@@ -121,11 +120,11 @@
                           href="https://lowteq.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="てくのろじあ -teQnologia-" class=
+                            <img alt="てくのろじあ" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/89867/icon_image/7076c0f8-ad1f-4e4f-8213-38ce9a1ad4e7_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              てくのろじあ -teQnologia-
+                              てくのろじあ
                             </div>
                           </div></a>
                         </div>
@@ -224,7 +223,7 @@
                           "https://booth.pm/ja/items/1055252"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "【VRChat向け】リボンセット6+1種類 + 汎用テクスチャ3種 | てくのろじあ -teQnologia-"
+                          "【VRChat向け】リボンセット6+1種類 + 汎用テクスチャ3種 | てくのろじあ"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
