updated at: 2020-03-05 16:53, 【VRChat向け】動くフォトフレーム２種類 - てくのろじあ - BOOTH

--- a/VRChat/33/1036533.html
+++ b/VRChat/33/1036533.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      【VRChat向け】動くフォトフレーム２種類 - てくのろじあ -teQnologia- - BOOTH
+      【VRChat向け】動くフォトフレーム２種類 - てくのろじあ - BOOTH
     </title>
     <meta name="description" content=
     "【商品説明】 複数の画像をまとめてスライドショーできる機能付きフォトフレーム3Dモデルです。 同封されたlowteq/slideshowシェーダーを使って動くのでVRChatでも動かすことができます。 VRChatでのたくさんの思い出をこのフォトフレームに収めませんか？ 動いているところは下の動画で確認できます。">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "【VRChat向け】動くフォトフレーム２種類 - てくのろじあ -teQnologia- - BOOTH">
+    "【VRChat向け】動くフォトフレーム２種類 - てくのろじあ - BOOTH">
     <meta name="twitter:description" content=
     "【商品説明】 複数の画像をまとめてスライドショーできる機能付きフォトフレーム3Dモデルです。 同封されたlowteq/slideshowシェーダーを使って動くのでVRChatでも動かすことができます。 VRChatでのたくさんの思い出をこのフォトフレームに収めませんか？ 動いているところは下の動画で確認できます。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/12d291ee-7368-4fb1-bc8b-4bf670ee558a/i/1036533/781b59ae-a8a4-4b17-bb51-7aeda55d888f_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "【VRChat向け】動くフォトフレーム２種類 - てくのろじあ -teQnologia- - BOOTH">
+    "【VRChat向け】動くフォトフレーム２種類 - てくのろじあ - BOOTH">
     <meta property="og:description" content=
     "【商品説明】 複数の画像をまとめてスライドショーできる機能付きフォトフレーム3Dモデルです。 同封されたlowteq/slideshowシェーダーを使って動くのでVRChatでも動かすことができます。 VRChatでのたくさんの思い出をこのフォトフレームに収めませんか？ 動いているところは下の動画で確認できます。">
     <meta property="og:image" content=
@@ -120,11 +120,11 @@
                           href="https://lowteq.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="てくのろじあ -teQnologia-" class=
+                            <img alt="てくのろじあ" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/89867/icon_image/7076c0f8-ad1f-4e4f-8213-38ce9a1ad4e7_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              てくのろじあ -teQnologia-
+                              てくのろじあ
                             </div>
                           </div></a>
                         </div>
@@ -223,7 +223,7 @@
                           "https://booth.pm/ja/items/1036533"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "【VRChat向け】動くフォトフレーム２種類 | てくのろじあ -teQnologia-"
+                          "【VRChat向け】動くフォトフレーム２種類 | てくのろじあ"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
