updated at: 2020-03-05 16:56, 【CC0】オリジナルアバター「シャペル」【VRChat想定】 - てくのろじあ - BOOTH

--- a/VRChat/66/1349366.html
+++ b/VRChat/66/1349366.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      【CC0】オリジナルアバター「シャペル」【VRChat想定】 - てくのろじあ -teQnologia- - BOOTH
+      【CC0】オリジナルアバター「シャペル」【VRChat想定】 - てくのろじあ - BOOTH
     </title>
     <meta name="description" content=
     "VRChatで使うことを想定して制作したアバター「シャペル」です。 VRChat以外のその他プラットフォームでもご自由にお使いいただけます。">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "【CC0】オリジナルアバター「シャペル」【VRChat想定】 - てくのろじあ -teQnologia- - BOOTH">
+    "【CC0】オリジナルアバター「シャペル」【VRChat想定】 - てくのろじあ - BOOTH">
     <meta name="twitter:description" content=
     "VRChatで使うことを想定して制作したアバター「シャペル」です。 VRChat以外のその他プラットフォームでもご自由にお使いいただけます。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/12d291ee-7368-4fb1-bc8b-4bf670ee558a/i/1349366/61a09f26-a882-45ff-9ac0-247b9ca6f194_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "【CC0】オリジナルアバター「シャペル」【VRChat想定】 - てくのろじあ -teQnologia- - BOOTH">
+    "【CC0】オリジナルアバター「シャペル」【VRChat想定】 - てくのろじあ - BOOTH">
     <meta property="og:description" content=
     "VRChatで使うことを想定して制作したアバター「シャペル」です。 VRChat以外のその他プラットフォームでもご自由にお使いいただけます。">
     <meta property="og:image" content=
@@ -132,11 +132,11 @@
                           href="https://lowteq.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="てくのろじあ -teQnologia-" class=
+                            <img alt="てくのろじあ" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/89867/icon_image/7076c0f8-ad1f-4e4f-8213-38ce9a1ad4e7_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              てくのろじあ -teQnologia-
+                              てくのろじあ
                             </div>
                           </div></a>
                         </div>
@@ -220,7 +220,7 @@
                           "https://booth.pm/ja/items/1349366"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "【CC0】オリジナルアバター「シャペル」【VRChat想定】 | てくのろじあ -teQnologia-"
+                          "【CC0】オリジナルアバター「シャペル」【VRChat想定】 | てくのろじあ"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
