--- a/VRChat/67/1342867.html
+++ b/VRChat/67/1342867.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>
-      ３Dモデル「カナ・アナベラル 」byミストラル 「VRC可」[フォロワー300人突破記念 3/8まで300円引き] - -
-      BOOTH
+      ３Dモデル「カナ・アナベラル 」byミストラル 「VRC可」[フォロワー300人突破記念 3/31まで300円引き] -
+      - BOOTH
     </title>
     <meta name="description" content=
     "東方夢時空　から あの人気な元祖騒霊キャラ カナ・アナベラルの3Dモデルです！ ポリゴン数:19879 FBX、OBJ テクスチャー7枚 PNG ＋おまけの標識モデル。 FBX、OBJ、PNG 2019/5/9 PSDを追加 2019/07/04　 目のボーンの向きを修正 使い方 MayaLTにて作っています。 ボーンはMayaのHumanoidが入っています。 VRChatに持っていく時の設定を書いたスクリーンショットを同封していますが、 特に使用用途を決めて作っていませんので、表情やリップシンクなどは入っていません。 使用用途に応じて、個人でUnityなどの設定をお願いしたします。">
@@ -14,14 +14,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "３Dモデル「カナ・アナベラル 」byミストラル 「VRC可」[フォロワー300人突破記念 3/8まで300円引き] - - BOOTH">
+    "３Dモデル「カナ・アナベラル 」byミストラル 「VRC可」[フォロワー300人突破記念 3/31まで300円引き] - - BOOTH">
     <meta name="twitter:description" content=
     "東方夢時空　から あの人気な元祖騒霊キャラ カナ・アナベラルの3Dモデルです！ ポリゴン数:19879 FBX、OBJ テクスチャー7枚 PNG ＋おまけの標識モデル。 FBX、OBJ、PNG 2019/5/9 PSDを追加 2019/07/04　 目のボーンの向きを修正 使い方 MayaLTにて作っています。 ボーンはMayaのHumanoidが入っています。 VRChatに持っていく時の設定を書いたスクリーンショットを同封していますが、 特に使用用途を決めて作っていませんので、表情やリップシンクなどは入っていません。 使用用途に応じて、個人でUnityなどの設定をお願いしたします。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/8479e525-e247-4dde-8237-dc916e3a3876/i/1342867/67afa0ad-9633-4152-aeb6-5eebdb964712_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "３Dモデル「カナ・アナベラル 」byミストラル 「VRC可」[フォロワー300人突破記念 3/8まで300円引き] - - BOOTH">
+    "３Dモデル「カナ・アナベラル 」byミストラル 「VRC可」[フォロワー300人突破記念 3/31まで300円引き] - - BOOTH">
     <meta property="og:description" content=
     "東方夢時空　から あの人気な元祖騒霊キャラ カナ・アナベラルの3Dモデルです！ ポリゴン数:19879 FBX、OBJ テクスチャー7枚 PNG ＋おまけの標識モデル。 FBX、OBJ、PNG 2019/5/9 PSDを追加 2019/07/04　 目のボーンの向きを修正 使い方 MayaLTにて作っています。 ボーンはMayaのHumanoidが入っています。 VRChatに持っていく時の設定を書いたスクリーンショットを同封していますが、 特に使用用途を決めて作っていませんので、表情やリップシンクなどは入っていません。 使用用途に応じて、個人でUnityなどの設定をお願いしたします。">
     <meta property="og:image" content=
@@ -144,7 +144,7 @@
                         <h2 class=
                         "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
                           ３Dモデル「カナ・アナベラル 」byミストラル
-                          「VRC可」[フォロワー300人突破記念 3/8まで300円引き]
+                          「VRC可」[フォロワー300人突破記念 3/31まで300円引き]
                         </h2>
                         <div class=
                         "u-text-assertive u-tpg-caption1"></div>
@@ -308,7 +308,7 @@
                           "https://booth.pm/ja/items/1342867"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "３Dモデル「カナ・アナベラル 」byミストラル 「VRC可」[フォロワー300人突破記念 3/8まで300円引き] | MISTRAL WORKS"
+                          "３Dモデル「カナ・アナベラル 」byミストラル 「VRC可」[フォロワー300人突破記念 3/31まで300円引き] | MISTRAL WORKS"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
@@ -328,7 +328,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "３Dモデル「カナ・アナベラル 」byミストラル 「VRC可」[フォロワー300人突破記念 3/8まで300円引き]"
+                            "３Dモデル「カナ・アナベラル 」byミストラル 「VRC可」[フォロワー300人突破記念 3/31まで300円引き]"
                             class="market-item-detail-item-image"
                             src=
                             "https://booth.pximg.net/8479e525-e247-4dde-8237-dc916e3a3876/i/1342867/67afa0ad-9633-4152-aeb6-5eebdb964712_base_resized.jpg">
@@ -338,7 +338,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "３Dモデル「カナ・アナベラル 」byミストラル 「VRC可」[フォロワー300人突破記念 3/8まで300円引き]"
+                            "３Dモデル「カナ・アナベラル 」byミストラル 「VRC可」[フォロワー300人突破記念 3/31まで300円引き]"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/8479e525-e247-4dde-8237-dc916e3a3876/i/1342867/0b4a5795-1484-4bd2-a8c3-d8faf353ad2f_base_resized.jpg">
@@ -348,7 +348,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "３Dモデル「カナ・アナベラル 」byミストラル 「VRC可」[フォロワー300人突破記念 3/8まで300円引き]"
+                            "３Dモデル「カナ・アナベラル 」byミストラル 「VRC可」[フォロワー300人突破記念 3/31まで300円引き]"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/8479e525-e247-4dde-8237-dc916e3a3876/i/1342867/2950d497-aad2-4cb3-821c-13a93c3c1655_base_resized.jpg">
@@ -358,7 +358,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "３Dモデル「カナ・アナベラル 」byミストラル 「VRC可」[フォロワー300人突破記念 3/8まで300円引き]"
+                            "３Dモデル「カナ・アナベラル 」byミストラル 「VRC可」[フォロワー300人突破記念 3/31まで300円引き]"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/8479e525-e247-4dde-8237-dc916e3a3876/i/1342867/a569c8db-333d-4d89-b4f3-765fe330d57a_base_resized.jpg">
@@ -368,7 +368,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "３Dモデル「カナ・アナベラル 」byミストラル 「VRC可」[フォロワー300人突破記念 3/8まで300円引き]"
+                            "３Dモデル「カナ・アナベラル 」byミストラル 「VRC可」[フォロワー300人突破記念 3/31まで300円引き]"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/8479e525-e247-4dde-8237-dc916e3a3876/i/1342867/20a56773-ad2d-43e7-910a-e94e56b73d4c_base_resized.jpg">
