--- a/VRChat/85/1007985.html
+++ b/VRChat/85/1007985.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      プリン【３Dモデル】 - てくのろじあ -teQnologia- - BOOTH
+      プリン【３Dモデル】 - てくのろじあ - BOOTH
     </title>
     <meta name="description" content=
     "【説明】 プリンの3Dモデルです。 リアルな質感で存在感のある仕上がりになりました。 VRCで食べたり食べさせあったりするのにいかがでしょうか。 Boneが入っているのでDynamicBoneなどのコンポーネントをつけることでぷるぷるさせることができます。 （DynamicBoneは付属していません） 三角面：1510 【ファイル内容】 ・fbxファイル ・テクスチャ ・unitypackageファイル ・Dynamicboneおすすめ設定サンプル画像 【利用について】 ・この商品を主体とする再配布を除き、商用・非商用問わずいかなる用途にもお使いいただけます。">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "プリン【３Dモデル】 - てくのろじあ -teQnologia- - BOOTH">
+    "プリン【３Dモデル】 - てくのろじあ - BOOTH">
     <meta name="twitter:description" content=
     "【説明】 プリンの3Dモデルです。 リアルな質感で存在感のある仕上がりになりました。 VRCで食べたり食べさせあったりするのにいかがでしょうか。 Boneが入っているのでDynamicBoneなどのコンポーネントをつけることでぷるぷるさせることができます。 （DynamicBoneは付属していません） 三角面：1510 【ファイル内容】 ・fbxファイル ・テクスチャ ・unitypackageファイル ・Dynamicboneおすすめ設定サンプル画像 【利用について】 ・この商品を主体とする再配布を除き、商用・非商用問わずいかなる用途にもお使いいただけます。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/12d291ee-7368-4fb1-bc8b-4bf670ee558a/i/1007985/6ecbd8c7-594a-47cd-a9c4-36c0f39efd71_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "プリン【３Dモデル】 - てくのろじあ -teQnologia- - BOOTH">
+    "プリン【３Dモデル】 - てくのろじあ - BOOTH">
     <meta property="og:description" content=
     "【説明】 プリンの3Dモデルです。 リアルな質感で存在感のある仕上がりになりました。 VRCで食べたり食べさせあったりするのにいかがでしょうか。 Boneが入っているのでDynamicBoneなどのコンポーネントをつけることでぷるぷるさせることができます。 （DynamicBoneは付属していません） 三角面：1510 【ファイル内容】 ・fbxファイル ・テクスチャ ・unitypackageファイル ・Dynamicboneおすすめ設定サンプル画像 【利用について】 ・この商品を主体とする再配布を除き、商用・非商用問わずいかなる用途にもお使いいただけます。">
     <meta property="og:image" content=
@@ -120,11 +120,11 @@
                           href="https://lowteq.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="てくのろじあ -teQnologia-" class=
+                            <img alt="てくのろじあ" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/89867/icon_image/7076c0f8-ad1f-4e4f-8213-38ce9a1ad4e7_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              てくのろじあ -teQnologia-
+                              てくのろじあ
                             </div>
                           </div></a>
                         </div>
@@ -222,8 +222,7 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1007985"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text=
-                          "プリン【３Dモデル】 | てくのろじあ -teQnologia-"
+                          data-text="プリン【３Dモデル】 | てくのろじあ"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
