updated at: 2020-03-05 21:08, 【オリジナル3Dモデル】プラン / プラン Lite 【セット】 - SPORADIC-E - BOOTH

--- a/VRChat/46/1295846.html
+++ b/VRChat/46/1295846.html
@@ -6,7 +6,7 @@
       【オリジナル3Dモデル】プラン / プラン Lite 【セット】 - SPORADIC-E - BOOTH
     </title>
     <meta name="description" content=
-    "オリジナル3Dモデル プラン 制作者 かでん (kden) 明るく元気な女の子｢プラン｣です。プランたんと呼んであげると喜びます。 ◆ [2019/4/27: v1.1.0 ] 改変に使えるPSDとVRMを同梱しました。 ◆ [2019/7/7] Quest向けの｢プラン Lite｣の同梱販売を開始しました．また，これに伴い価格を変更しました． 本ページでは，通常版(PC版)とLite版(Quest向け軽量版)の｢セット販売｣を行っています．通常版のみの個別販売は未定です． Lite版のみは別ページ( https://sporadic-e.booth.pm/items/1445662">
+    "オリジナル3Dモデル プラン 制作者 かでん (kden) 明るく元気な女の子｢プラン｣です。プランたんと呼んであげると喜びます。 ◆ [2019/4/27: v1.1.0 ] 改変に使えるPSDとVRMを同梱しました。 ◆ [2019/7/7] Quest向けの｢プラン Lite｣の同梱販売を開始しました．また，これに伴い価格を変更しました． ◆ [2020/某日]こっそりハロウィンverと冬verのテクスチャを追加しました． 本ページでは，通常版(PC版)とLite版(Quest向け軽量版)の｢セット販売｣を行っています．通常版のみの個別販売は未定です． Lite版のみは別ページ(">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1295846">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "【オリジナル3Dモデル】プラン / プラン Lite 【セット】 - SPORADIC-E - BOOTH">
     <meta name="twitter:description" content=
-    "オリジナル3Dモデル プラン 制作者 かでん (kden) 明るく元気な女の子｢プラン｣です。プランたんと呼んであげると喜びます。 ◆ [2019/4/27: v1.1.0 ] 改変に使えるPSDとVRMを同梱しました。 ◆ [2019/7/7] Quest向けの｢プラン Lite｣の同梱販売を開始しました．また，これに伴い価格を変更しました． 本ページでは，通常版(PC版)とLite版(Quest向け軽量版)の｢セット販売｣を行っています．通常版のみの個別販売は未定です． Lite版のみは別ページ( https://sporadic-e.booth.pm/items/1445662">
+    "オリジナル3Dモデル プラン 制作者 かでん (kden) 明るく元気な女の子｢プラン｣です。プランたんと呼んであげると喜びます。 ◆ [2019/4/27: v1.1.0 ] 改変に使えるPSDとVRMを同梱しました。 ◆ [2019/7/7] Quest向けの｢プラン Lite｣の同梱販売を開始しました．また，これに伴い価格を変更しました． ◆ [2020/某日]こっそりハロウィンverと冬verのテクスチャを追加しました． 本ページでは，通常版(PC版)とLite版(Quest向け軽量版)の｢セット販売｣を行っています．通常版のみの個別販売は未定です． Lite版のみは別ページ(">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/81541f91-c514-450c-b882-988fe98aaa68/i/1295846/15dd58fa-45f2-40da-9d4f-c00f771bd202_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "【オリジナル3Dモデル】プラン / プラン Lite 【セット】 - SPORADIC-E - BOOTH">
     <meta property="og:description" content=
-    "オリジナル3Dモデル プラン 制作者 かでん (kden) 明るく元気な女の子｢プラン｣です。プランたんと呼んであげると喜びます。 ◆ [2019/4/27: v1.1.0 ] 改変に使えるPSDとVRMを同梱しました。 ◆ [2019/7/7] Quest向けの｢プラン Lite｣の同梱販売を開始しました．また，これに伴い価格を変更しました． 本ページでは，通常版(PC版)とLite版(Quest向け軽量版)の｢セット販売｣を行っています．通常版のみの個別販売は未定です． Lite版のみは別ページ( https://sporadic-e.booth.pm/items/1445662">
+    "オリジナル3Dモデル プラン 制作者 かでん (kden) 明るく元気な女の子｢プラン｣です。プランたんと呼んであげると喜びます。 ◆ [2019/4/27: v1.1.0 ] 改変に使えるPSDとVRMを同梱しました。 ◆ [2019/7/7] Quest向けの｢プラン Lite｣の同梱販売を開始しました．また，これに伴い価格を変更しました． ◆ [2020/某日]こっそりハロウィンverと冬verのテクスチャを追加しました． 本ページでは，通常版(PC版)とLite版(Quest向け軽量版)の｢セット販売｣を行っています．通常版のみの個別販売は未定です． Lite版のみは別ページ(">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/81541f91-c514-450c-b882-988fe98aaa68/i/1295846/15dd58fa-45f2-40da-9d4f-c00f771bd202_base_resized.jpg">
     <meta property="og:url" content=
@@ -391,7 +391,8 @@
                             [2019/4/27: v1.1.0 ]
                             改変に使えるPSDとVRMを同梱しました。 ◆ [2019/7/7]
                             Quest向けの｢プラン
-                            Lite｣の同梱販売を開始しました．また，これに伴い価格を変更しました．
+                            Lite｣の同梱販売を開始しました．また，これに伴い価格を変更しました． ◆
+                            [2020/某日]こっそりハロウィンverと冬verのテクスチャを追加しました．
                             本ページでは，通常版(PC版)とLite版(Quest向け軽量版)の｢セット販売｣を行っています．通常版のみの個別販売は未定です．
                             Lite版のみは別ページ(
                             https://sporadic-e.booth.pm/items/1445662
