--- a/VRChat/31/1287031.html
+++ b/VRChat/31/1287031.html
@@ -5,7 +5,8 @@
     <title>
       ネコのびっくり箱　VRChat想定 - リノールのどうぶつ雑貨店 - BOOTH
     </title>
-    <meta name="description" content="可愛いサプライズをしよう。お茶目なあなたとVRで。">
+    <meta name="description" content=
+    "可愛いサプライズをしよう。お茶目なあなたとVRで。 ( English below )">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1287031">
@@ -14,14 +15,14 @@
     <meta name="twitter:title" content=
     "ネコのびっくり箱　VRChat想定 - リノールのどうぶつ雑貨店 - BOOTH">
     <meta name="twitter:description" content=
-    "可愛いサプライズをしよう。お茶目なあなたとVRで。">
+    "可愛いサプライズをしよう。お茶目なあなたとVRで。 ( English below )">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/860474d4-d153-4e66-a594-a4e3e5e77c4e/i/1287031/5eea43f4-2f6f-4a96-b3d1-c3b842ec025e_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "ネコのびっくり箱　VRChat想定 - リノールのどうぶつ雑貨店 - BOOTH">
     <meta property="og:description" content=
-    "可愛いサプライズをしよう。お茶目なあなたとVRで。">
+    "可愛いサプライズをしよう。お茶目なあなたとVRで。 ( English below )">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/860474d4-d153-4e66-a594-a4e3e5e77c4e/i/1287031/5eea43f4-2f6f-4a96-b3d1-c3b842ec025e_base_resized.jpg">
     <meta property="og:url" content=
@@ -121,7 +122,7 @@
                           "u-d-flex u-align-items-center">
                             <img alt="リノールのどうぶつ雑貨店" class=
                             "user-avatar at-item-summary" src=
-                            "https://booth.pximg.net/c/48x48/users/83020/icon_image/8ec2d14c-63cc-4c30-be90-7bfb63469fad_base_resized.jpg">
+                            "https://booth.pximg.net/c/48x48/users/83020/icon_image/08a1b19d-0562-4451-8d63-45e257741f9e_base_resized.jpg">
                             <div class="u-text-ellipsis">
                               リノールのどうぶつ雑貨店
                             </div>
@@ -310,7 +311,8 @@
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
-                            可愛いサプライズをしよう。お茶目なあなたとVRで。
+                            可愛いサプライズをしよう。お茶目なあなたとVRで。 ( English
+                            below )
                           </p>
                         </div>
                       </section>
