updated at: 2020-03-05 21:59, オリジナル3Dモデル『Lua』ver1.0.1 - Ficsnade - BOOTH

--- a/VRChat/54/1255054.html
+++ b/VRChat/54/1255054.html
@@ -6,7 +6,7 @@
       オリジナル3Dモデル『Lua』ver1.0.1 - Ficsnade - BOOTH
     </title>
     <meta name="description" content=
-    "『Lua』（ルア） VRChatでの利用を想定したキャラクターモデルです。 その他アプリケーション、ゲーム、動画配信等でもご利用頂けます。 3Dモデル『Lua』関係情報（Twitterモーメントです） https://twitter.com/i/moments/1107256298947530752 2019/03/17：色改変用のPSDサンプルを配布開始しました 『Lua』ChangeColor PSD https://ficsnade.booth.pm/items/1275743">
+    "【CAUTION!】 FullSet = Standard + Classic 『Lua』（ルア） VRChatでの利用を想定したキャラクターモデルです。 その他アプリケーション、ゲーム、動画配信等でもご利用頂けます。 3Dモデル『Lua』関係情報（Twitterモーメントです） https://twitter.com/i/moments/1107256298947530752 2019/03/17：色改変用のPSDサンプルを配布開始しました 『Lua』ChangeColor PSD https://ficsnade.booth.pm/items/1275743">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1255054">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "オリジナル3Dモデル『Lua』ver1.0.1 - Ficsnade - BOOTH">
     <meta name="twitter:description" content=
-    "『Lua』（ルア） VRChatでの利用を想定したキャラクターモデルです。 その他アプリケーション、ゲーム、動画配信等でもご利用頂けます。 3Dモデル『Lua』関係情報（Twitterモーメントです） https://twitter.com/i/moments/1107256298947530752 2019/03/17：色改変用のPSDサンプルを配布開始しました 『Lua』ChangeColor PSD https://ficsnade.booth.pm/items/1275743">
+    "【CAUTION!】 FullSet = Standard + Classic 『Lua』（ルア） VRChatでの利用を想定したキャラクターモデルです。 その他アプリケーション、ゲーム、動画配信等でもご利用頂けます。 3Dモデル『Lua』関係情報（Twitterモーメントです） https://twitter.com/i/moments/1107256298947530752 2019/03/17：色改変用のPSDサンプルを配布開始しました 『Lua』ChangeColor PSD https://ficsnade.booth.pm/items/1275743">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/eca89977-bf28-4ec6-9d85-8a57d9d9edc3/i/1255054/ec515866-1194-47c4-bc16-de83643acd43_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "オリジナル3Dモデル『Lua』ver1.0.1 - Ficsnade - BOOTH">
     <meta property="og:description" content=
-    "『Lua』（ルア） VRChatでの利用を想定したキャラクターモデルです。 その他アプリケーション、ゲーム、動画配信等でもご利用頂けます。 3Dモデル『Lua』関係情報（Twitterモーメントです） https://twitter.com/i/moments/1107256298947530752 2019/03/17：色改変用のPSDサンプルを配布開始しました 『Lua』ChangeColor PSD https://ficsnade.booth.pm/items/1275743">
+    "【CAUTION!】 FullSet = Standard + Classic 『Lua』（ルア） VRChatでの利用を想定したキャラクターモデルです。 その他アプリケーション、ゲーム、動画配信等でもご利用頂けます。 3Dモデル『Lua』関係情報（Twitterモーメントです） https://twitter.com/i/moments/1107256298947530752 2019/03/17：色改変用のPSDサンプルを配布開始しました 『Lua』ChangeColor PSD https://ficsnade.booth.pm/items/1275743">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/eca89977-bf28-4ec6-9d85-8a57d9d9edc3/i/1255054/ec515866-1194-47c4-bc16-de83643acd43_base_resized.jpg">
     <meta property="og:url" content=
@@ -470,6 +470,7 @@
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
+                            【CAUTION!】 FullSet = Standard + Classic
                             『Lua』（ルア） VRChatでの利用を想定したキャラクターモデルです。
                             その他アプリケーション、ゲーム、動画配信等でもご利用頂けます。
                             3Dモデル『Lua』関係情報（Twitterモーメントです）
