updated at: 2020-03-05 22:12, McGuire風ニーパッド - PX RECA - BOOTH

--- a/VRChat/05/1270005.html
+++ b/VRChat/05/1270005.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      McGuire風ニーパッド - PX LECA - BOOTH
+      McGuire風ニーパッド - PX RECA - BOOTH
     </title>
     <meta name="description" content=
     "米軍の使用しているニーパッドです。 自作アバターの雰囲気を上げるために作りました。実物にはあまり似ていませんがよろしければお使いください。 質問があればtwitterまでお願いいたします。(自分自身まだまだ初心者なので解らないこともあるかもしれません。) 追記(2019/3/12) 画像2枚目の下のリングに茶色い色がのっていたので取り除きました。">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "McGuire風ニーパッド - PX LECA - BOOTH">
+    "McGuire風ニーパッド - PX RECA - BOOTH">
     <meta name="twitter:description" content=
     "米軍の使用しているニーパッドです。 自作アバターの雰囲気を上げるために作りました。実物にはあまり似ていませんがよろしければお使いください。 質問があればtwitterまでお願いいたします。(自分自身まだまだ初心者なので解らないこともあるかもしれません。) 追記(2019/3/12) 画像2枚目の下のリングに茶色い色がのっていたので取り除きました。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/98f92fcd-afe6-4796-ab1b-3c494adc69dd/i/1270005/b781807e-e7e6-446e-a89a-f3f4fa1fa369_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "McGuire風ニーパッド - PX LECA - BOOTH">
+    "McGuire風ニーパッド - PX RECA - BOOTH">
     <meta property="og:description" content=
     "米軍の使用しているニーパッドです。 自作アバターの雰囲気を上げるために作りました。実物にはあまり似ていませんがよろしければお使いください。 質問があればtwitterまでお願いいたします。(自分自身まだまだ初心者なので解らないこともあるかもしれません。) 追記(2019/3/12) 画像2枚目の下のリングに茶色い色がのっていたので取り除きました。">
     <meta property="og:image" content=
@@ -119,11 +119,11 @@
                           href="https://fresca.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="PX LECA" class=
+                            <img alt="PX RECA" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/3031947/icon_image/0af74c15-c08f-4ddd-8d50-5eb8b5cb1124_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              PX LECA
+                              PX RECA
                             </div>
                           </div></a>
                         </div>
@@ -206,7 +206,7 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1270005"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text="McGuire風ニーパッド | PX LECA"
+                          data-text="McGuire風ニーパッド | PX RECA"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
