--- a/VRChat/86/1252486.html
+++ b/VRChat/86/1252486.html
@@ -378,55 +378,11 @@
                             "click" data-product-list=
                             "from market_show via tag_list to search_index"
                             href=
-                            "https://booth.pm/ja/search/VRoidStudio">
-                            <div class="search-guide-tablet-label">
-                              <div class=
-                              "search-guide-tablet-label-inner">
-                                VRoidStudio
-                              </div>
-                            </div></a><a class=
-                            "search-guide-tablet" data-tracking=
-                            "click" data-product-list=
-                            "from market_show via tag_list to search_index"
-                            href=
-                            "https://booth.pm/ja/search/vroid">
-                            <div class="search-guide-tablet-label">
-                              <div class=
-                              "search-guide-tablet-label-inner">
-                                vroid
-                              </div>
-                            </div></a><a class=
-                            "search-guide-tablet" data-tracking=
-                            "click" data-product-list=
-                            "from market_show via tag_list to search_index"
-                            href=
-                            "https://booth.pm/ja/search/Vroid">
-                            <div class="search-guide-tablet-label">
-                              <div class=
-                              "search-guide-tablet-label-inner">
-                                Vroid
-                              </div>
-                            </div></a><a class=
-                            "search-guide-tablet" data-tracking=
-                            "click" data-product-list=
-                            "from market_show via tag_list to search_index"
-                            href=
                             "https://booth.pm/ja/search/VRoid%E7%94%A8%E3%83%86%E3%82%AF%E3%82%B9%E3%83%81%E3%83%A3">
                             <div class="search-guide-tablet-label">
                               <div class=
                               "search-guide-tablet-label-inner">
                                 VRoid用テクスチャ
-                              </div>
-                            </div></a><a class=
-                            "search-guide-tablet" data-tracking=
-                            "click" data-product-list=
-                            "from market_show via tag_list to search_index"
-                            href=
-                            "https://booth.pm/ja/search/3D%E7%94%A8%E3%83%86%E3%82%AF%E3%82%B9%E3%83%81%E3%83%A3">
-                            <div class="search-guide-tablet-label">
-                              <div class=
-                              "search-guide-tablet-label-inner">
-                                3D用テクスチャ
                               </div>
                             </div></a><a class=
                             "search-guide-tablet" data-tracking=
@@ -444,17 +400,6 @@
                             "click" data-product-list=
                             "from market_show via tag_list to search_index"
                             href=
-                            "https://booth.pm/ja/search/%E3%82%BB%E3%82%B7%E3%83%AB%E5%A4%89%E8%BA%AB">
-                            <div class="search-guide-tablet-label">
-                              <div class=
-                              "search-guide-tablet-label-inner">
-                                セシル変身
-                              </div>
-                            </div></a><a class=
-                            "search-guide-tablet" data-tracking=
-                            "click" data-product-list=
-                            "from market_show via tag_list to search_index"
-                            href=
                             "https://booth.pm/ja/search/Vroid%E7%94%A8%E3%83%86%E3%82%AF%E3%82%B9%E3%83%81%E3%83%A3">
                             <div class="search-guide-tablet-label">
                               <div class=
@@ -466,11 +411,11 @@
                             "click" data-product-list=
                             "from market_show via tag_list to search_index"
                             href=
-                            "https://booth.pm/ja/search/vroid%E3%83%86%E3%82%AF%E3%82%B9%E3%83%81%E3%83%A3">
+                            "https://booth.pm/ja/search/%E4%BF%AE%E9%81%93%E6%9C%8D">
                             <div class="search-guide-tablet-label">
                               <div class=
                               "search-guide-tablet-label-inner">
-                                vroidテクスチャ
+                                修道服
                               </div>
                             </div></a>
                           </div>
