updated at: 2020-03-06 22:11, オリジナル3Dモデル【水無月ルアVer2.00】 - KaworuLab - BOOTH

--- a/VRChat/43/1263943.html
+++ b/VRChat/43/1263943.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      オリジナル3Dモデル【水無月ルアVer2.00】 - kaworuLab - BOOTH
+      オリジナル3Dモデル【水無月ルアVer2.00】 - KaworuLab - BOOTH
     </title>
     <meta name="description" content=
     "〇こちらの３Dモデルは水無月カヲルが製作したものになっています。 〇VRChat用アバター、VRM用アバター、Beat Saber用アバターの3種類を梱包しています。 〇ポリゴン数　△25262polygon 〇マテリアルスロット数　2 〇ボーン数　119 〇シップシンク可能 〇まばたき可能（表情によっては破綻） 〇DynamicBone　設定済み（別途購入） 〇身長　134cm（Unity内で測定）">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "オリジナル3Dモデル【水無月ルアVer2.00】 - kaworuLab - BOOTH">
+    "オリジナル3Dモデル【水無月ルアVer2.00】 - KaworuLab - BOOTH">
     <meta name="twitter:description" content=
     "〇こちらの３Dモデルは水無月カヲルが製作したものになっています。 〇VRChat用アバター、VRM用アバター、Beat Saber用アバターの3種類を梱包しています。 〇ポリゴン数　△25262polygon 〇マテリアルスロット数　2 〇ボーン数　119 〇シップシンク可能 〇まばたき可能（表情によっては破綻） 〇DynamicBone　設定済み（別途購入） 〇身長　134cm（Unity内で測定）">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/a19ba3ba-41bc-4115-8b35-10de24d6e4b9/i/1263943/906c57f2-4495-4024-9532-e426d855081b_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "オリジナル3Dモデル【水無月ルアVer2.00】 - kaworuLab - BOOTH">
+    "オリジナル3Dモデル【水無月ルアVer2.00】 - KaworuLab - BOOTH">
     <meta property="og:description" content=
     "〇こちらの３Dモデルは水無月カヲルが製作したものになっています。 〇VRChat用アバター、VRM用アバター、Beat Saber用アバターの3種類を梱包しています。 〇ポリゴン数　△25262polygon 〇マテリアルスロット数　2 〇ボーン数　119 〇シップシンク可能 〇まばたき可能（表情によっては破綻） 〇DynamicBone　設定済み（別途購入） 〇身長　134cm（Unity内で測定）">
     <meta property="og:image" content=
@@ -131,11 +131,11 @@
                           href="https://kaworulab.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="kaworuLab" class=
+                            <img alt="KaworuLab" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/3571396/icon_image/faed6384-9a71-426c-8ee4-8089a528f716_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              kaworuLab
+                              KaworuLab
                             </div>
                           </div></a>
                         </div>
@@ -236,7 +236,7 @@
                           "https://booth.pm/ja/items/1263943"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "オリジナル3Dモデル【水無月ルアVer2.00】 | kaworuLab"
+                          "オリジナル3Dモデル【水無月ルアVer2.00】 | KaworuLab"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
