--- a/VRChat/52/1146752.html
+++ b/VRChat/52/1146752.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      金属バット（使用済み） - 篠山悪趣味堂 - BOOTH
+      金属バット（使用済み） - 烏箱 - BOOTH
     </title>
     <meta name="description" content=
     "固いものを殴ってひん曲がってしまったバットです ショタっぽいアバターに付けると特定の層に致命的ダメージを与えられるかもしれません ・ポリゴン数：300 ・改変:可 ・商用利用:可 ・再配布:不可">
@@ -12,15 +12,13 @@
     <link rel="canonical" href="https://booth.pm/ja/items/1146752">
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content=
-    "金属バット（使用済み） - 篠山悪趣味堂 - BOOTH">
+    <meta name="twitter:title" content="金属バット（使用済み） - 烏箱 - BOOTH">
     <meta name="twitter:description" content=
     "固いものを殴ってひん曲がってしまったバットです ショタっぽいアバターに付けると特定の層に致命的ダメージを与えられるかもしれません ・ポリゴン数：300 ・改変:可 ・商用利用:可 ・再配布:不可">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/9d628343-8c42-4954-af0a-3cec6c0cf6d7/i/1146752/bce8c890-9724-4b81-8852-a666ae9465b1_base_resized.jpg">
     <meta property="og:type" content="product">
-    <meta property="og:title" content=
-    "金属バット（使用済み） - 篠山悪趣味堂 - BOOTH">
+    <meta property="og:title" content="金属バット（使用済み） - 烏箱 - BOOTH">
     <meta property="og:description" content=
     "固いものを殴ってひん曲がってしまったバットです ショタっぽいアバターに付けると特定の層に致命的ダメージを与えられるかもしれません ・ポリゴン数：300 ・改変:可 ・商用利用:可 ・再配布:不可">
     <meta property="og:image" content=
@@ -119,11 +117,11 @@
                           href="https://kasasubako.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="篠山悪趣味堂" class=
+                            <img alt="烏箱" class=
                             "user-avatar at-item-summary" src=
-                            "https://booth.pximg.net/c/48x48/users/191771/icon_image/a4bbe8a8-faae-4be0-812d-a93188767213_base_resized.jpg">
+                            "https://booth.pximg.net/c/48x48/users/191771/icon_image/dc3a0852-70ff-400e-ab79-0cafd8ba8c43_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              篠山悪趣味堂
+                              烏箱
                             </div>
                           </div></a>
                         </div>
@@ -206,9 +204,8 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1146752"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text="金属バット（使用済み） | 篠山悪趣味堂"
-                          data-count="none" class=
-                          "twitter-share-button" href=
+                          data-text="金属バット（使用済み） | 烏箱" data-count=
+                          "none" class="twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
                           <div class="u-ml-300">
                             <div class="fb-like" data-action="like"
